Sun May  3 19:08:07 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/parser/Parser.jj: sizeof TYPE requires one
	  more lookahead because EXPR of "sizeof EXPR" may have parentheses,
	  too.  We can distinguish type and expr by 1 look ahead, because
	  Head of type() == head of typeref() == head of typeref_base().
	  typeref_base has unique terminal on head.

Sat May  2 09:49:23 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Compiler.java: refactoring: rename
	  constant: programId -> ProgramName.

	* net/loveruby/cflat/compiler/Options.java: ditto.

Sat May  2 09:30:51 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Compiler.java (commandMain):
	  refactoring: extract method: #buildTarget.

Thu Apr 30 22:53:10 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/CodeGenerator.java: remove unused
	  method #doesSpillDX.

	* net/loveruby/cflat/compiler/CodeGenerator.java: add "left"
	  argument to #compileBinaryOp.

Thu Apr 30 22:19:12 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ast/ConstantTable.java: move under entity/.

	* net/loveruby/cflat/ast/ConstantEntry.java: ditto.

	* net/loveruby/cflat/compiler/CodeGenerator.java: follow it.

	* net/loveruby/cflat/ast/StringLiteralNode.java: follow it.

	* net/loveruby/cflat/ir/StringValue.java: follow it.

	* net/loveruby/cflat/ir/IR.java: follow it.

Thu Apr 30 22:04:07 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ast/AbstractAssignNode.java: remove unused
	  setter setLHS.

Thu Apr 30 21:49:07 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ast/*.java: remove unused reference to
	  asm.Label.

Mon Apr 27 02:55:41 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/entity: new package.

	* net/loveruby/cflat/ast: move Entity and its subclasses under
	  entity/.

	* net/loveruby/cflat/ast: move Scope and its subclasses under
	  entity/.
